--- a/vue-todo/index.html
+++ b/vue-todo/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css">
+    <link href="https://fonts.gooleapis.com/css?family=Ubuntu" rel=""stylesheet>
     <title>vue-todo</title>
   </head>
   <body>
