--- a/vue2-basic-book/exam/04/04-2/index.html
+++ b/vue2-basic-book/exam/04/04-2/index.html
@@ -23,18 +23,26 @@
             `
         };
 
+        var UserProfile = { template: '<p>User Profile Component</p>' }
+        var UserPost = { template: '<p>User Post Component</p>' }
 
-        // Main, Login 컴포넌트 정의
-        var Main = {template: '<div>main</div>'};
-        var Login = {template: '<div>login</div>'};
-
-        // 각 URL에 맞춰 표시할 컴포넌트 지정
         var routes = [
-            { path: '/main', component: Main },
-            { path: '/login', component: Login }
+            { 
+                path: '/user', 
+                component: User,
+                children: [
+                    {
+                        path: 'posts',
+                        component: UserPost
+                    },
+                    {
+                        path: 'profile',
+                        component: UserProfile
+                    },
+                ]
+            },
         ]
 
-        // 뷰 라우터 정의
         var router = new VueRouter({
             routes
         });
